# python_django_pool_42_school

./: README.md
implementation/d00/ex00/: myawesomescript.sh
implementation/d00/ex01/: cv.html
implementation/d00/ex02/: form.html
implementation/d00/ex03/: copy.html
implementation/d00/ex04/: snippets.html
implementation/d00/ex05/: index.html
implementation/d01/ex00/: var.py
implementation/d01/ex01/: numbers.py  numbers.txt
implementation/d01/ex02/: var_to_dict.py
implementation/d01/ex03/: capital_city.py
implementation/d01/ex04/: state.py
implementation/d01/ex05/: all_in.py
implementation/d01/ex06/: my_sort.py
implementation/d01/ex07/: periodic_table.css  periodic_table.html  periodic_table.py
implementation/d02/ex00/: myCV.html  myCV.template  render.py  settings.py
implementation/d02/ex01/: intern.py
implementation/d02/ex02/: beverages.py
implementation/d02/ex03/: machine.py
implementation/d02/ex04/: cv.html  elem.py
implementation/d03/: .gitignore
implementation/d05/: manage.py  requirements.txt
implementation/d06/: manage.py  requirements.txt
implementation/d06_alternative/: manage.py
implementation/d07/: requirements.txt
implementation/d08/: 08_nginx.conf  README.rst  gunicorn.conf.py  manage.py  nginx.conf  requirements.txt  set_nginxconf.sh  start_gunicorn.sh
implementation/d08/django-gallery/: LICENSE  MANIFEST.in  README.rst  setup.cfg
implementation/d08/django-gallery/gallery/: admin.py  forms.py  models.py  urls.py  views.py
implementation/d08/django-gallery/gallery/templates/gallery/: home.html
(+147 files in other folders)
